# RobotStudio

./: .gitignore  build.sh  control_panel.sh  email_ip.py  enter.sh  tmux.sh
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/servo/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/.private/servo/lib/pkgconfig/: servo.pc
catkin_ws/devel/.private/servo/lib/servo/: servo_node
catkin_ws/devel/.private/servo/share/servo/cmake/: servoConfig.cmake
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  servo.pc
catkin_ws/devel/lib/servo/: servo_node
catkin_ws/devel/share/servo/cmake/: servoConfig-version.cmake  servoConfig.cmake
catkin_ws/logs/servo/: build.make.009.log.stderr  build.make.010.log.stderr  build.make.012.log.stderr  build.make.024.log.stderr  build.make.098.log.stderr  build.make.099.log.stderr  build.make.120.log.stderr
catkin_ws/src/servo/: CMakeLists.txt  package.xml
catkin_ws/src/servo/launch/: servo.launch
catkin_ws/src/servo/src/: dance.py  servo_node.cpp  sit.py  stand.py  test_sine_publisher.py  trot.py
docker/: Dockerfile  README.md
